Montei estrura do HTML e do CSS. Comecei a codar a cipher

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,53 @@
-/* css */
+body{
+    text-align: center;
+    font-family: Open sans, sans-serif;
+    background-color: #a999c5;
+}
+
+
+h1 {
+    color: #000000;
+    font-size: 50px;
+}
+
+h2 {
+    color: #3a3a3b;
+    font-size: 30px;
+}
+
+.key {
+    margin: 0 0 15px;
+  }
+  
+  .key input {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 15px;
+  }
+
+  .palavra {
+    margin: 0 0 15px;
+  }
+  
+  .palavra input {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 15px;
+  }
+  
+  .palavra button {
+    border: 0;
+    color: #ffffff;
+    background: #2c3b6e;
+    font-weight:bold;
+    padding: 15px 20px;
+    font-size: 16px;
+    borde-radius: 4px;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: .3s;
+  }
+  
+  .palavra button:hover {
+    opacity:.8;
+  }
