--- a/src/style.css
+++ b/src/style.css
@@ -1,54 +1,79 @@
 body {
     text-align: center;
     font-family: Open sans, sans-serif;
-    background-color: #a999c5;
+    background-color: #f9c758;
+    
 }
-
 
 h1 {
-    color: #000000;
-    font-size: 50px;
+    color: #faf8f9;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #000;
+    font-size: 60px;
+    text-align: center;
+    width: 250px;
+    margin: 18px auto;
+    border-radius: 15px;
+    padding: 20px;
 }
 
-h2 {
-    color: #3a3a3b;
-    font-size: 30px;
+.columns {
+  display: flex;
+}
+  
+.columns .column {
+      flex: 1 ;
 }
 
+.instructions {
+  color: #000000;
+  font-size: 18px;
+  text-align: center;
+  line-height: 31px;
+  width: 560px;
+  margin: 6px 28px; 
+}
 
-.key {
+.input-area {
     margin: 0 0 15px;
+    box-sizing: border-box;
   }
   
-  .key input {
+  input {
     display: block;
-    margin: 0 auto;
+    margin: 11px auto 20px;
     padding: 10px 15px;
+    border-radius: 15px;
+    outline: none;
+    border: 2px solid black;
+    width: 225px;
+  }
+  input:focus {
+    border-color: tomato;
   }
 
-  .message {
+  label {
+    font-size: 17px;
     margin: 0 0 15px;
+    padding: 10px 15px; 
+ 
   }
-  
-  .message input {
-    display: block;
-    margin: 0 auto;
-    padding: 10px 15px;
-  }
-  
-  .message button {
+     
+  .buttons button {
     border: 0;
     color: #ffffff;
-    background: #2c3b6e;
+    background: #293c52;
     font-weight:bold;
     padding: 15px 20px;
     font-size: 16px;
-    borde-radius: 4px;
+    border-radius: 15px;
     margin-top: 20px;
     cursor: pointer;
     transition: .3s;
   }
   
-  .message button:hover {
+  .button button:hover {
     opacity:.8;
   }
+
+  
