--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #f9c758;
 }
 
-h1 {
+.title {
   color: #faf8f9;
   font-size: 70px;
   -webkit-text-stroke-width: 1px;
@@ -15,7 +15,7 @@ h1 {
   padding: 20px;
 }
 
-h2 {
+.sub-title {
   color: #080406;
   font-size: 30px;
   font-weight: 400;
@@ -44,25 +44,31 @@ h2 {
   box-sizing: border-box;
 }
 
-input {
+.input-text,
+.text-result {
   display: block;
   margin: 11px auto 20px;
   padding: 10px 15px;
   border-radius: 15px;
   outline: none;
-  border: 2px solid black;
+  border: 2px solid #000000;
   width: 225px;
 }
 
-input:focus {
-  border-color: tomato;
+.input-text:focus {
+  border-color: #ff6347;
 }
 
-label {
-  font-size: 17px;
+.text-result {
+  background-color: #f9c758;
+  font-size: 18px;
+  text-align: center;
+}
+
+.labels {
+  font-size: 20px;
   margin: 0 0 15px;
   padding: 10px 15px;
-
 }
 
 .buttons button {
@@ -75,9 +81,19 @@ label {
   border-radius: 15px;
   margin-top: 20px;
   cursor: pointer;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .button button:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
+
+@media (max-width: 1024px) {
+
+  .header {
+    text-align: center;
+    width: 133%;
+  }
+}
+
+
